# IPCV_Lab

./: .gitignore
annotations_1/: CMakeLists.txt
annotations_1/src/: annotate1.cpp
annotations_2/: CMakeLists.txt
annotations_2/src/: annotate2.cpp
bilateralFilter/: CMakeLists.txt  main.cpp
bilateralFilter/include/: bilateralFilter.hpp  gaussian.hpp
bilateralFilter/src/: bilateralFilter.cpp  gaussian.cpp
blur/: main.cu
erosionDilation/: CMakeLists.txt  main.cpp
erosionDilation/include/: closing.hpp  dilation.hpp  opening.hpp
erosionDilation/src/: closing.cpp  dilation.cpp  erosion.cpp  opening.cpp
grayScale/: main.cu
histogramEqualisation/: CMakeLists.txt  main.cpp
histogramEqualisation/include/: histogramEqualisation.hpp
histogramEqualisation/src/: histogramEqualisation.cpp
histogramMatching/: CMakeLists.txt  exHist.txt  main.cpp
histogramMatching/include/: histogramMatching.hpp
histogramMatching/src/: histogramMatching.cpp
imageSegmentation/: CMakeLists.txt  main.cpp
imageSegmentation/include/: erosion.hpp  medianBlur.hpp  thinning.hpp
imageSegmentation/src/: erosion.cpp  medianBlur.cpp  thinning.cpp
